--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div class="row">
         <div class="col-sm-6">
     <div class="my-5 p-5 text-light">
-        <h4>
-            Hi,</h4>
+        <h1>
+            Project Name</h1>
             <h4>
-            we explore various options & provide you the best option available for making webpage of your product.
+          Get quick Business ideas and Achieve your Business Goals with us
         </h4>
 
     </div>
